# PubChemPy

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  PubChemPy.ipynb  README.md  README.rst  codemeta.json  conftest.py  pubchempy.py  pubchempy_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: README.md  ci.yml  code-check.yml  minimal.yml  pytest.yml  release.yml  test.yml
PubChemPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  README.rst  api.md  api.rst  conf.py  index.md  index.rst  requirements.txt
docs/guide/: advanced.md  advanced.rst  compound.md  compound.rst  contribute.md  contribute.rst  download.md  download.rst  gettingstarted.md  gettingstarted.rst  install.md  install.rst  introduction.md  introduction.rst  pandas.md  pandas.rst  properties.md  properties.rst  pugrest.md  searching.md  searching.rst  substance.md  substance.rst
docs/source/: api.rst  conf.py  index.rst
docs/source/guide/: advanced.rst  compound.rst  contribute.rst  gettingstarted.rst  install.rst  intro.rst  pandas.rst  search.rst  searching.rst  substance.rst
examples/: 1-introduction.ipynb  2-getting-started.ipynb  CAS registry numbers.ipynb  Chemical fingerprints and similarity.ipynb
requirements/: common.txt  dev.txt
scripts/: make-docs
tests/: conftest.py  test_assay.py  test_compound.py  test_compound3d.py  test_coverage_improvements.py  test_download.py  test_errors.py  test_identifiers.py  test_pandas.py  test_properties.py  test_requests.py  test_robust_network.py  test_search.py  test_server_resilient.py  test_sources.py  test_substance.py
