[project]
name = "PubChemPy"
version = "1.0.5"
description = "A simple Python wrapper around the PubChem PUG REST API."
readme = "README.md"
authors = [{ name = "Matt Swain", email = "m.swain@me.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []
keywords = ["pubchem", "python", "rest", "api", "chemistry", "cheminformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mcs07/PubChemPy"
Repository = "https://github.com/mcs07/PubChemPy"
Documentation = "https://docs.pubchempy.org"
Releases = "https://github.com/mcs07/PubChemPy/releases"
"Issue Tracker" = "https://github.com/mcs07/PubChemPy/issues"

[project.optional-dependencies]
pandas = ["pandas>=0.16.2"]
ssl = ["certifi>=2025.7.14"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "test" },
    "pre-commit>=4.2.0",
    "ipykernel>=6.30.0",
]
lint = ["ruff>=0.12.5", "nb-clean>=4.0.1"]
docs = ["furo>=2025.7.19", "myst-parser>=3.0.1", "sphinx>=7.4.7"]
test = ["pytest>=8.4.1", "pytest-rerunfailures>=15.1"]

[tool.setuptools]
py-modules = ["pubchempy"]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v --reruns 3 --reruns-delay 5 --only-rerun TimeoutError --only-rerun ServerBusyError --only-rerun RemoteDisconnected --only-rerun URLError"
testpaths = ["tests"]
log_cli = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "W", "UP"]
ignore = ["D213", "D203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pubchempy"]
